--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Akka HTTP microservice example",
-  "description": "Simple (micro)service which demonstrates how to accomplish tasks typical for REST service using Akka HTTP.",
-  "website": "https://typesafe.com/activator/template/akka-http-microservice",
-  "success_url": "/ip/8.8.8.8"
+  "name": "Magda Dataset Registry",
+  "description": "Stores extensible information about every dataset known to Magda, and provides read and write access to it for users and systems with appropriate permissions.",
+  "website": "https://github.com/TerriaJS/magda-registry",
+  "success_url": "/ping"
 }
