--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -18,3 +18,6 @@ services:
     extends:
       file: docker-compose-base.yml
       service: datastore
+    volumes:
+      - ../postgres/data:/var/lib/postgresql/data
+      - ../postgres/scripts:/docker-entrypoint-initdb.d
