--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -21,3 +21,5 @@ services:
     volumes:
       - ../postgres/data:/var/lib/postgresql/data
       - ../postgres/scripts:/docker-entrypoint-initdb.d
+    ports:
+      - "5432:5432"
