--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,11 @@ http {
   interface = "0.0.0.0"
   port = 9001
 }
+
+db {
+  default {
+    driver = "org.postgresql.Driver"
+    url = "jdbc:postgresql://datastore/postgres"
+    user = "postgres"
+  }
+}
