--- a/docker/docker-compose-local.yml
+++ b/docker/docker-compose-local.yml
@@ -22,7 +22,9 @@ services:
       file: docker-compose-base.yml
       service: datastore
     volumes:
-      - ../postgres/data:/var/lib/postgresql/data
+      - postgresdata:/var/lib/postgresql/data
       - ../postgres/scripts:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+volumes:
+  postgresdata:
